* 1.5beta4
    - treat IPv4-mapped IPv6 addresses as IPv4
    - add support for IPv6 CIDR blocks (thanks Dimitry Andric)

* 1.5beta3
    - recognize "last message repeated N times" contextually and per-source
    - attackers now gauged with *dangerousness* instead of attack counts (adjust your -a !)
    - support for Sendmail relaying abuse messages
    - support for vsftpd authentication failure messages
    - recognize messages of Gentoo's PAM implementation for authentication failure

* 1.5beta2  Jan 2010
    - support for Cucipop authentication failure messages
    - support for Exim ESMTP authentication failure messages
    - logsucker: handle files disappearing and reappearing at runtime
    - fix recognition of some IPv6 addresses

* 1.5beta1  Dec 2009
    - logsucker: sshguard can now get logs from many files at once
    - autonomously cut logging when not in debug mode
    - limit per-line addresses in hosts backend (thanks Petr Lampa)
    - fix possible race stimulated when many addresses are blocked (thanks Petr Lampa)
    - explicitly handle when firewall allows blocked hosts to keep producing traffic
    - fix log filtering on OSes with inverted priority declarations

* 1.4       Aug 2009
    - add touchiness: block repeated abusers for longer
    - add blacklisting: store frequent abusers for permanent blocking
    - add support for IPv6 in whitelisting (experimental)
    - sshguard ignores interrupted fgets() and reloads more seldom (thanks Keven Tipping)
    - debug mode now enabled with SSHGUARD_DEBUG environment variable (no "-d")
    - support non-POSIX libCs that require getopt.h (thanks Nobuhiro Iwamatsu)
    - import newer SimCList containing a number of fixes and improvements
    - firewall backends now block all traffic from attackers by default, not per-service
    - netfilter/iptables backend now verifies credentials at initialization
    - parser accepts "-" and "_" chars in process names